fix cursor color neon light for dark mode

--- a/content_scripts/content_scripts.css
+++ b/content_scripts/content_scripts.css
@@ -4,7 +4,7 @@ surfingkeys_mark {
     opacity: 0.7;
 }
 div.surfingkeys_cursor {
-    background-color: #0642CE;
+    background-color: #bcff36;
     color: #f0f8ff;
 }
 div.surfingkeys_cursor:empty {
